LOG4J2-2966 Revert the usage of ParameterizedMessage.deepToString().
There are a couple of motivations for me to revert this change, but
some particular highlights are as follows:

- Many of the type check that is performed by deepToString() is
  already addressed in JsonWriter.

- Usage of an external method breaks the self-containment contract of
  JsonWriter.

- deepToString() protects against recursive collections, whereas
  JsonWriter doesn't. Even using deepToString() in JsonWriter
  isn't enough to protect it against self-referencing collections;
  all collection handling methods in JsonWriter needs to be adapted.
  Hence, rather than a code base where there is partial mitigation for
  this anomaly, now it is explicit that there is no built-in prevention
  mechanisms. This behaviour is also in line with the Java standard
  library, e.g., Arrays.toString().

--- a/src/site/asciidoc/manual/json-template-layout.adoc.vm
+++ b/src/site/asciidoc/manual/json-template-layout.adoc.vm
@@ -1221,6 +1221,22 @@ Yes, link:lookups.html[lookups] (e.g., `${dollar}{java:version}`,
 `${dollar}{env:USER}`, `${dollar}{date:MM-dd-yyyy}`) are supported in string
 literals of templates. Though note that they are not garbage-free.
 
+=== Are recursive collections supported?
+
+No. Consider a `Message` containing a recursive value as follows:
+
+[source,java]
+----
+Object[] recursiveCollection = new Object[1];
+recursiveCollection[0] = recursiveCollection;
+----
+
+While the exact exception might vary, you will most like get a
+`StackOverflowError` while trying to render `recursiveCollection` into a
+`String`. Note that this is also the default behaviour for other Java standard
+library methods, e.g., `Arrays.toString()`. Hence mind self references while
+logging.
+
 [#faq-garbage-free]
 === Is `JsonTemplateLayout` garbage-free?
 
