LOG4J2-2993 Fix code example typo for JsonTemplateLayout.

--- a/src/site/asciidoc/manual/json-template-layout.adoc.vm
+++ b/src/site/asciidoc/manual/json-template-layout.adoc.vm
@@ -516,7 +516,7 @@ truncated by the given points:
   "stackTrace": {
     "stringified": true,
     "truncatedStringSuffix": ">",
-    "truncationPointStrings": ["at javax.servlet.http.HttpServlet.service"]
+    "truncationPointMatcherStrings": ["at javax.servlet.http.HttpServlet.service"]
   }
 }
 ----
