LOG4J2-2999 Add new entries to feature comparison matrix.

--- a/src/site/asciidoc/manual/json-template-layout.adoc.vm
+++ b/src/site/asciidoc/manual/json-template-layout.adoc.vm
@@ -1242,17 +1242,29 @@ alternatives.
 | ✕
 | ✓
 
+| Stack trace truncation?
+| ✓
+| ✕
+| ✕
+| ✕
+
 | JSON pretty print?
 | ✕
 | ✓
 | ✕
 | ✕
 
-| Additional field support?
+| Additional string fields?
 | ✓
 | ✓
 | ✓
 | ✓
+
+| Additional JSON fields?
+| ✓
+| ✕
+| ✕
+| ✕
 |===
 
 [#faq]
