--- a/src/site/markdown/download.md.vm
+++ b/src/site/markdown/download.md.vm
@@ -65,53 +65,12 @@ in many unix distributions.
 
 $h2 Previous Releases
 
-Log4j 2.12.1 was the last 2.x release to support Java 7. Those artifacts can be found at:
-
-| Distribution                   | Mirrors                                                  | Checksum                                                        | Signature                                                       |
-| ------------------------------ | -------------------------------------------------------- | --------------------------------------------------------------- | --------------------------------------------------------------- |
-| Apache Log4j 2 binary (tar.gz) | [apache-log4j-2.12.1-bin.tar.gz][bintar-jdk7] | [apache-log4j-2.12.1-bin.tar.gz.sha512][bintarsha512-jdk7] | [apache-log4j-2.12.1-bin.tar.gz.asc][bintarasc-jdk7] |
-| Apache Log4j 2 binary (zip)    | [apache-log4j-2.12.1-bin.zip][binzip-jdk7]    | [apache-log4j-2.12.1-bin.zip.sha512][binzipsha512-jdk7]    | [apache-log4j-2.12.1-bin.zip.asc][binzipasc-jdk7]    |
-| Apache Log4j 2 source (tar.gz) | [apache-log4j-2.12.1-src.tar.gz][srctar-jdk7] | [apache-log4j-2.12.1-src.tar.gz.sha512][srctarsha512-jdk7] | [apache-log4j-2.12.1-src.tar.gz.asc][srctarasc-jdk7] |
-| Apache Log4j 2 source (zip)    | [apache-log4j-2.12.1-src.zip][srczip-jdk7]    | [apache-log4j-2.12.1-src.zip.sha512][srczipsha512-jdk7]    | [apache-log4j-2.12.1-src.zip.asc][srczipasc-jdk7]    |
-
-[bintar-jdk7]: https://www.apache.org/dyn/closer.lua/logging/log4j/2.12.1/apache-log4j-2.12.1-bin.tar.gz
-[bintarsha512-jdk7]: https://www.apache.org/dist/logging/log4j/2.12.1/apache-log4j-2.12.1-bin.tar.gz.sha512
-[bintarasc-jdk7]: https://www.apache.org/dist/logging/log4j/2.12.1/apache-log4j-2.12.1-bin.tar.gz.asc
-[binzip-jdk7]: https://www.apache.org/dyn/closer.lua/logging/log4j/2.12.1/apache-log4j-2.12.1-bin.zip
-[binzipsha512-jdk7]: https://www.apache.org/dist/logging/log4j/2.12.1/apache-log4j-2.12.1-bin.zip.sha512
-[binzipasc-jdk7]: https://www.apache.org/dist/logging/log4j/2.12.1/apache-log4j-2.12.1-bin.zip.asc
-[srctar-jdk7]: https://www.apache.org/dyn/closer.lua/logging/log4j/2.12.1/apache-log4j-2.12.1-src.tar.gz
-[srctarsha512-jdk7]: https://www.apache.org/dist/logging/log4j/2.12.1/apache-log4j-2.12.1-src.tar.gz.sha512
-[srctarasc-jdk7]: https://www.apache.org/dist/logging/log4j/2.12.1/apache-log4j-2.12.1-src.tar.gz.asc
-[srczip-jdk7]: https://www.apache.org/dyn/closer.lua/logging/log4j/2.12.1/apache-log4j-2.12.1-src.zip
-[srczipsha512-jdk7]: https://www.apache.org/dist/logging/log4j/2.12.1/apache-log4j-2.12.1-src.zip.sha512
-[srczipasc-jdk7]: https://www.apache.org/dist/logging/log4j/2.12.1/apache-log4j-2.12.1-src.zip.asc
-
-
-Log4j 2.3 was the last 2.x release to support Java 6. Those artifacts can be found at:
-
-| Distribution                   | Mirrors                                    | Checksum                                          | Signature                                         |
-| ------------------------------ | ------------------------------------------ | ------------------------------------------------- | ------------------------------------------------- |
-| Apache Log4j 2 binary (tar.gz) | [apache-log4j-2.3-bin.tar.gz][bintar-jdk6] | [apache-log4j-2.3-bin.tar.gz.md5][bintarmd5-jdk6] | [apache-log4j-2.3-bin.tar.gz.asc][bintarasc-jdk6] |
-| Apache Log4j 2 binary (zip)    | [apache-log4j-2.3-bin.zip][binzip-jdk6]    | [apache-log4j-2.3-bin.zip.md5][binzipmd5-jdk6]    | [apache-log4j-2.3-bin.zip.asc][binzipasc-jdk6]    |
-| Apache Log4j 2 source (tar.gz) | [apache-log4j-2.3-src.tar.gz][srctar-jdk6] | [apache-log4j-2.3-src.tar.gz.md5][srctarmd5-jdk6] | [apache-log4j-2.3-src.tar.gz.asc][srctarasc-jdk6] |
-| Apache Log4j 2 source (zip)    | [apache-log4j-2.3-src.zip][srczip-jdk6]    | [apache-log4j-2.3-src.zip.md5][srczipmd5-jdk6]    | [apache-log4j-2.3-src.zip.asc][srczipasc-jdk6]    |
-
-[bintar-jdk6]: https://www.apache.org/dyn/closer.lua/logging/log4j/2.3/apache-log4j-2.3-bin.tar.gz
-[bintarmd5-jdk6]: https://www.apache.org/dist/logging/log4j/2.3/apache-log4j-2.3-bin.tar.gz.md5
-[bintarasc-jdk6]: https://www.apache.org/dist/logging/log4j/2.3/apache-log4j-2.3-bin.tar.gz.asc
-[binzip-jdk6]: https://www.apache.org/dyn/closer.lua/logging/log4j/2.3/apache-log4j-2.3-bin.zip
-[binzipmd5-jdk6]: https://www.apache.org/dist/logging/log4j/2.3/apache-log4j-2.3-bin.zip.md5
-[binzipasc-jdk6]: https://www.apache.org/dist/logging/log4j/2.3/apache-log4j-2.3-bin.zip.asc
-[srctar-jdk6]: https://www.apache.org/dyn/closer.lua/logging/log4j/2.3/apache-log4j-2.3-src.tar.gz
-[srctarmd5-jdk6]: https://www.apache.org/dist/logging/log4j/2.3/apache-log4j-2.3-src.tar.gz.md5
-[srctarasc-jdk6]: https://www.apache.org/dist/logging/log4j/2.3/apache-log4j-2.3-src.tar.gz.asc
-[srczip-jdk6]: https://www.apache.org/dyn/closer.lua/logging/log4j/2.3/apache-log4j-2.3-src.zip
-[srczipmd5-jdk6]: https://www.apache.org/dist/logging/log4j/2.3/apache-log4j-2.3-src.zip.md5
-[srczipasc-jdk6]: https://www.apache.org/dist/logging/log4j/2.3/apache-log4j-2.3-src.zip.asc
+Log4j 2.12.1 was the last 2.x release to support Java 7 while Log4j 2.3 was the last 2.x release to support
+Java 6. The Log4j team no longer provides support for Java 6 or 7.
 
 All previous releases of Apache log4j can be found in the
-[archive repository](https://archive.apache.org/dist/logging/log4j/).
+[ASF archive repository](https://archive.apache.org/dist/logging/log4j/). Of course, all releases are availble for
+use as dependencies from the [Maven Central Repository](https://search.maven.org/search?q=org.apache.logging.log4j)
 
 $h2 Using Log4j on your classpath
 
